<resources>
    <string name="app_name">ProResto</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ensicaen">ENSICAEN</string>
    <string name="description_ensicaen">A l’ENSICAEN, la vie étudiante est essentielle et fait partie intégrante de la formation dispensée pendant 3 ans.
Le Bureau des élèves est chargé de l’animation de la vie étudiante et de la vie associative de l’établissement. De nombreuse activités sont organisées au sein de la cinquantaine de clubs et associations.
Caen est une ville qui offre de multiples ressources en terme d’activités dans un environnement privilégié et une magnifique région !
Plus de 50 clubs
25 000 étudians à Caen
Une vie étudiante unique !</string>
    <string name="snipet_ensicaen">Pas si mal que ça..!</string>
    <string name="title_activity_book">Réserver un restaurant</string>
    <string name="title_activity_info">Infos</string>
    <string name="title_activity_map">Lieu des restaurants</string>
    <string name="title_activity_maps">Lieu des restaurants</string>
    <string name="title_activity_profile">Modifier son profile</string>
    <string name="title_activity_resto">Restaurants</string>
    <string name="title_activity_reservations">Mes réservations</string>
    <string name="text_button_book">Réserver</string>
    <string name="text_button_info">Info</string>
    <string name="text_button_map">Carte</string>
    <string name="text_button_profile">Profile</string>
    <string name="text_button_resto">Restaurants</string>
    <string name="imageButtonBookDescription">Icon calling the Book activity</string>
    <string name="imageButtonInfoDescription">Icon calling the Info activity</string>
    <string name="imageButtonMapDescription">Icon calling the Map activity</string>
    <string name="imageButtonProfileDescription">Icon calling the Profile activity</string>
    <string name="imageButtonRestoDescription">Icon calling the Resto activity</string>
    <string-array name="array_resto_dollys">
        <item>@string/title_resto_dollys</item>   
        <item>@string/description_resto_dollys</item>   
        <item>@string/snipet_resto_dollys</item> 
    </string-array>
    <string-array name="array_resto_rua">
        <item>@string/title_resto_rua</item>   
        <item>@string/description_resto_rua</item>   
        <item>@string/snipet_resto_rua</item> 
    </string-array>
    <string-array name="array_resto_atelier_burger">
        <item>@string/title_resto_atelier_burger</item>   
        <item>@string/description_resto_atelier_burger</item>   
        <item>@string/snipet_resto_atelier_burger</item> 
    </string-array>
    <string-array name="array_resto_a_contre_sens">
        <item>@string/title_resto_a_contre_sens</item>   
        <item>@string/description_resto_a_contre_sens</item>   
        <item>@string/snipet_resto_a_contre_sens</item> 
    </string-array>
    <string-array name="array_resto_le_bistrot_102">
        <item>@string/title_resto_le_bistrot_102</item>   
        <item>@string/description_resto_le_bistrot_102</item>   
        <item>@string/snipet_resto_le_bistrot_102</item> 
    </string-array>
    <string-array name="array_resto_cave_a_huitres">
        <item>@string/title_resto_cave_a_huitres</item>   
        <item>@string/description_resto_cave_a_huitres</item>   
        <item>@string/snipet_resto_cave_a_huitres</item> 
    </string-array>
    <string-array name="array_resto_anouche">
        <item>@string/title_resto_anouche</item>   
        <item>@string/description_resto_anouche</item>   
        <item>@string/snipet_resto_anouche</item> 
    </string-array>
    <string-array name="array_resto_burger_street">
        <item>@string/title_resto_burger_street</item>   
        <item>@string/description_resto_burger_street</item>   
        <item>@string/snipet_resto_burger_street</item> 
    </string-array>
    <string-array name="array_resto_le_sans_gene">
        <item>@string/title_resto_le_sans_gene</item>   
        <item>@string/description_resto_le_sans_gene</item>   
        <item>@string/snipet_resto_le_sans_gene</item> 
    </string-array>
    <string-array name="array_resto_mar">
        <item>@string/title_resto_mar</item>   
        <item>@string/description_resto_mar</item>   
        <item>@string/snipet_resto_mar</item> 
    </string-array>
    <string-array name="array_schedule_days">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>
    <string-array name="array_resto_title">
        <item>Select...</item>                          // 1
        <item>@string/title_resto_dollys</item>         // 2
        <item>@string/title_resto_rua</item>            // 3
        <item>@string/title_resto_atelier_burger</item> // 4
        <item>@string/title_resto_a_contre_sens</item>  // 5
        <item>@string/title_resto_le_bistrot_102</item> // 6
        <item>@string/title_resto_cave_a_huitres</item> // 7
        <item>@string/title_resto_anouche</item>        // 8
        <item>@string/title_resto_burger_street</item>  // 9
        <item>@string/title_resto_le_sans_gene</item>   // 10
        <item>@string/title_resto_mar</item>            // 11

    </string-array>
    <string name="title_resto_dollys">Dolly’s</string>
    <string name="title_resto_rua">Restaurant Universitaire</string>
    <string name="title_resto_atelier_burger">L’atelier du burger</string>
    <string name="title_resto_a_contre_sens">A contre sens</string>
    <string name="title_resto_le_bistrot_102">Le bistrot 102</string>
    <string name="title_resto_cave_a_huitres">La cave à Huitres</string>
    <string name="title_resto_anouche">Anouche</string>
    <string name="title_resto_burger_street">Burger Street</string>
    <string name="title_resto_le_sans_gene">Le sans Gêne</string>
    <string name="title_resto_mar">Chez Mary Marzin</string>
    <string name="snipet_resto_dollys">16 av de la Libération</string>
    <string name="snipet_resto_rua">Côte de Nacre</string>
    <string name="snipet_resto_atelier_burger">6 rue du Buquet</string>
    <string name="snipet_resto_a_contre_sens">8 rue des Croisiers</string>
    <string name="snipet_resto_le_bistrot_102">102 rue Saint Martin</string>
    <string name="snipet_resto_cave_a_huitres">24 bis Quai Vendeuvre</string>
    <string name="snipet_resto_anouche">7 rue Samuel Bochard</string>
    <string name="snipet_resto_burger_street">13 rue Caponière</string>
    <string name="snipet_resto_le_sans_gene">2 rue du Vaugueux</string>
    <string name="snipet_resto_mar">20 rue de l’inconnu</string>
    <string name="description_resto_none">Aucune description pour ce restaurant</string>
    <string name="description_resto">Description du restaurant</string>
    <string name="description_resto_dollys">Options : Petit-déjeuner, Brunch, Ouvert tard, Terrasse extérieure, Sur réservation, Places assises, Service en salle </string>
    <string name="description_resto_rua">@string/description_resto_none</string>
    <string name="description_resto_atelier_burger">L’atelier du Burger Caen! Burgers maison composés de produits frais ... Options : Dîner, Ouvert tard, Plats à emporter </string>
    <string name="description_resto_a_contre_sens">Après avoir fréquenté depuis son plus jeune âge de grandes et belles adresses du Martinez à l’Elysée en passant par le Chabichou à Courchevel et secondé pendant dix ans Eric Provost à l’Etrier, Anthony Caillot vole de ses propres ailes aujourd’hui.
En s’installant à Caen avec sa charmante épouse Cindy, ce jeune Chef exigeant a rapidement trouvé sa voie. Il offre de découvrir une cuisine toute personnelle, faite de contrastes, rigoureuse, créative mais respectueuse des traditions. S’entourant de plus des services de Samuel Moreiras, l’enseigne est devenue incontournable. La réservation est indispensable.</string>
    <string name="description_resto_le_bistrot_102">Christelle et Cédric vous accueillent au Bistrot 102 depuis le 3 Juin 2014! Produits frais fait maison. Options : American Express acceptée, Mastercard acceptée, Visa acceptée, Wi-Fi gratuit, Bar complet, Terrasse extérieure, Sur réservation, Places assises, Sert de l’alcool, Service en salle, Bière et vin.</string>
    <string name="description_resto_cave_a_huitres">Le restaurant La Cave à Huitres vous accueille à Caen dans le département du Calvados. Nous sommes implantés face au port de Caen.
Nous vous invitons à vous installer sur la terrasse afin de profiter de la vue sur le port. La terrasse est ombragée et ensoleillée selon vos envies.
Notre restaurant d’une quinzaine de couverts vous reçoit dans un cadre chaleureux créé dans des matériaux nobles. Le cadre design et cosy vous permet de passer un agréable moment.
Nous vous proposons de déguster nos huitres. En tant que producteurs, nous mettons un point d’honneur à vous préparer des huitres Normandes et de délicieux fruits de mer. Nous sélectionnons pour vous des vins uniques faits pour révéler à votre palais le goût des huitres.
Vous avez la possibilité de manger sur place ou de les emporter ! A bientôt à La Cave à Huitres ! Options : Terrasse extérieure, Sur réservation, Places assises.</string>
    <string name="description_resto_anouche">Restaurant arménien à base de produits frais et de plats 100% maison, Anouche est situé près du port de Caen.</string>
    <string name="description_resto_burger_street">Hamburgers faits maison et pain boulanger. Restauration rapide, sur place ou à emporter à Caen.</string>
    <string name="description_resto_le_sans_gene">Restaurant pas comme les autres formule unique tout compris :1 apéritif offert (sangria blanche) 1 café compris, le reste est à volonté entrées, plats, fromages, salades et desserts maison ,boissons incluses vin (avec modération) et sodas... Une particularité de notre établissement qu’il ne faut pas négliger est que le client est mis à contribution pour se servir et se faire cuire ses propres brochettes sur un barbecue géant...</string>
    <string name="description_resto_mar">Venez découvrir cet incroyable Restaurant, le plus délicieux de ce monde. N’ayez pas peur d’etre surpris, osez franchir le pas de la porte et contemplez, goutez, rigolez "Chez Mary Marzin" !</string>
    <string name="resto_schedule_title">Horaire du restaurant</string>
    <string name="text_button_resto_menu">Menu</string>
    <string name="text_button_resto_reserve">Réserver</string>
    <string name="title_home_book">Réserver un Restaurant</string>
    <string name="text_select_restaurant">Restaurant :</string>
    <string name="text_select_date">Date :</string>
    <string name="text_select_time">Horaire :</string>
    <string name="text_select_nb_person">Nombre de personnes :</string>
    <string name="button_my_reservations">Mes réservations</string>
    <string name="Title_reservation_activity">Mes Réservations</string>
    <string name="Button_clear_reservation">Annuler une réservation</string>
    <string name="info_title">Créateurs de ProResto</string>
    <string name="text_creation">Pierre Marzin et Tristan Mary sont les deux développeurs de cette application.\n\nElle fut créée dans le but de prendre en main le langage android.\n\nN\'hesitez pas à noter cette application!</string>
    <string name="text_appetit">Bon appétit !</string>
    <string name="action_settings">Settings</string>
    <string name="action_like">Like</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \’my location\’ feature, which shows your current location on the map.</string>
</resources>