<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_creation"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="15sp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="2.5"
            android:layout_marginTop="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/verrines"
        android:src="@drawable/verrines"
        android:adjustViewBounds="true"
        android:id="@+id/image">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_appetit"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="top"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>