<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"

                tools:context=".Home"
    android:background="@drawable/ic_font">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:layout_weight="0.5">

            <LinearLayout
                android:id="@+id/LayoutResto"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:clickable="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textButtonResto"
                    android:text="@string/text_button_resto"
                    android:textAppearance="@style/TextButtonActivityStyle"
                    android:layout_gravity="center_horizontal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/imageButtonResto"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_resto"
                    android:background="@null"
                    android:contentDescription="@string/imageButtonRestoDescription"
                    android:layout_weight="0.50"
                    android:adjustViewBounds="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutMap"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:baselineAligned="false"
                android:clickable="true"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textButtonMap"
                    android:text="@string/text_button_map"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextButtonActivityStyle"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/imageButtonMap"
                    android:src="@drawable/ic_map"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/imageButtonMapDescription"
                    android:layout_weight="0.50"
                    android:adjustViewBounds="true" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:layout_weight="0.5">

            <LinearLayout
                android:id="@+id/LayoutBook"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:baselineAligned="false"
                android:clickable="true"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/imageButtonBook"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/imageButtonBookDescription"
                    android:layout_weight="0.50"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textButtonBook"
                    android:text="@string/text_button_book"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextButtonActivityStyle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutOrder"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:clickable="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/imageButtonOrder"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_men"
                    android:background="@null"
                    android:contentDescription="@string/imageButtonOrderDescription"
                    android:layout_weight="0.50"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textButtonOrder"
                    android:text="@string/text_button_order"
                    android:textAppearance="@style/TextButtonActivityStyle"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
